Use Java 17 instead of Java 8